# rmm

./: .mcp.json  AGENTS.md  boost.json  composer.json  package-lock.json
.github/workflows/: build-tray-agent.yml
.junie/mcp/: mcp.json
app/DTOs/: NetdataCpuMetric.php  NetdataRamMetric.php  NetdataV3Metrics.php
app/Http/Controllers/: AgentInstallerController.php  AgentTrayController.php
app/Http/Controllers/Api/: DeviceCommandController.php  DeviceEnrollmentController.php  DeviceMetricsController.php  HeartbeatController.php
app/Http/Requests/: CheckRequest.php  EnrollRequest.php  MetricsRequest.php
app/Livewire/Devices/: Agent.php  Index.php  Pending.php  Show.php
app/Models/: Device.php  DeviceCommand.php  DeviceDiskMetric.php  DeviceMetric.php  DeviceNetworkMetric.php  Script.php
app/Policies/: Device.php
app/Providers/: AppServiceProvider.php
bootstrap/: app.php
database/factories/: DeviceCommandFactory.php  DeviceFactory.php  DeviceMetricFactory.php
database/migrations/: 2025_12_05_000001_create_devices_table.php  2025_12_05_000002_create_device_metrics_table.php  2025_12_06_190719_add_hardware_specs_to_devices_table.php  2025_12_08_122809_add_extended_metrics_to_device_metrics_table.php  2025_12_09_072532_add_cpu_details_to_device_metrics_table.php  2025_12_09_072538_add_memory_details_to_device_metrics_table.php  2025_12_09_072538_create_device_disk_metrics_table.php  2025_12_09_072539_add_process_metrics_to_device_metrics_table.php  2025_12_09_072539_add_system_info_to_devices_table.php  2025_12_09_072539_create_device_network_metrics_table.php  2025_12_09_111210_add_cpu_cores_to_device_metrics.php  2025_12_09_144331_create_device_commands_table.php  2025_12_09_144331_create_scripts_table.php
database/seeders/: DatabaseSeeder.php  DeviceSeeder.php
docs/: BLUEPRINTS_PLAN.md  SECURITY.md
resources/tauri/tray-template/: .gitignore  IMPLEMENTATION.md  QUICKSTART.md  README.md  package.json
resources/tauri/tray-template/src/: enrollment.html  index.html  logs.html  settings.html  updates.html
resources/tauri/tray-template/src-tauri/: Cargo.toml  tauri.conf.json
resources/tauri/tray-template/src-tauri/icons/: README.md
resources/tauri/tray-template/src-tauri/src/: agent.rs  config.rs  enrollment.rs  main.rs  metrics.rs  runtime_config.rs  storage.rs  sysinfo.rs  updater.rs
resources/tauri/tray-template/src-tauri/wix/: main.wxs
resources/views/components/layouts/app/: header.blade.php  sidebar.blade.php
resources/views/livewire/devices/: agent.blade.php  index.blade.php  pending.blade.php  show.blade.php
routes/: api.php  web.php
tests/Feature/: AgentInstallerTest.php  AgentTrayDownloadTest.php
tests/Feature/Api/: CheckTest.php  DeviceCommandTest.php  EnrollmentTest.php  HeartbeatTest.php  LoggingTest.php  MetricsTest.php  NetdataParseTest.php  RateLimitingTest.php
tests/Feature/Devices/: IndexTest.php  PendingTest.php  ShowTest.php
tests/Feature/Feature/Livewire/Devices/: DeviceCommandExecutionTest.php
tests/Unit/DTOs/: NetdataCpuMetricTest.php  NetdataRamMetricTest.php
