[package]
name = "rmm-tray"
version = "0.1.0"
description = "{APP_NAME}"
authors = ["You <you@example.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["system-tray", "shell-open", "notification-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs", "sync"] }
tokio-util = "0.7"
futures-util = "0.3"
anyhow = "1"
sysinfo = "0.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
sha2 = "0.10"
hex = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = []

